# my-web-2025

./: .dockerignore  .eslintrc.json  .eslintrc.test.js  .gitattributes  .gitignore  .htaccess  .mcp.json  .next-build-id  .npmrc  .prettierignore  .prettierrc  .textlintrc.json  .tmp-controls.txt  .tmp-extract-controls.mjs  .tmp-inspect-reactdoctor.mjs  ABOUT_BREADCRUMBS_IMPLEMENTATION_SUMMARY.md  BREADCRUMBS_IMPLEMENTATION_SUMMARY.md  BUSINESS_MAIL_BLOCK_IMPLEMENTATION_SUMMARY.md  CACHE_CLEAR_GUIDE.md  CLAUDE.md  DEBUG_PORTFOLIO_ALL_GALLERY.md  DEVELOPMENT_CACHE_ISSUES_SOLUTION.md  Dockerfile  GLOBAL_BREADCRUMBS_IMPLEMENTATION_SUMMARY.md  IMAGE_LOADING_FIX.md  MARKDOWN_REFERENCE_FIX_SUMMARY.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PERFORMANCE_REGRESSION_FIXES_SUMMARY.md  PORTFOLIO_ALL_GALLERY_BACK_BUTTON_REMOVAL.md  PORTFOLIO_ALL_GALLERY_BREADCRUMBS_FIX.md  PORTFOLIO_ALL_GALLERY_HYDRATION_FIX.md  PORTFOLIO_ALL_GALLERY_HYDRATION_FIX_V2.md  PORTFOLIO_ANALYTICS_IMPLEMENTATION.md  PORTFOLIO_ANALYTICS_STYLE_UPDATE.md  PORTFOLIO_BREADCRUMBS_FINAL_CHECK.md  PORTFOLIO_BREADCRUMBS_FIXES.md  PORTFOLIO_BREADCRUMBS_IMPLEMENTATION_SUMMARY.md  PRODUCTION_SETUP_SUMMARY.md  README.md  SIMPLE_BREADCRUMBS_IMPLEMENTATION_SUMMARY.md  (+72 more)
.claude/: agent-log.txt  settings.json
.test-cache/: Jest.hash  (+3 more)
apps/cms-api/: Cargo.toml  Dockerfile
apps/cms-api/data/db/: cms-api-dev.db
apps/cms-api/src/: main.rs
apps/cms-api/src/db/: mod.rs  schema.sql
apps/cms-api/src/db/migrations/: 001_init.sql
apps/cms-api/src/routes/: entries.rs  markdown.rs  media.rs  mod.rs  preview.rs  search.rs  tags.rs
(+3277 files in other folders)
